Bug 257871 - System should not hibernate when power unplugged
Summary: System should not hibernate when power unplugged
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on: 210389
Blocks:
  Show dependency treegraph
 
Reported: 2010-11-25 14:03 UTC by Will Stephenson
Modified: 2010-11-29 16:11 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2010-11-25 14:03:02 UTC
Happens again with 4.6beta1, cloning as powerdevil was rewritten.

+++ This bug was initially created as a clone of Bug #210389 +++

Version:            (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

Hardware:  Acer AOD250
Distro:  Kubuntu 9.04
KDE:  4.3.2

If I do not touch any keys or mouse and leave my laptop plugged in for any amount of time longer than when it would suspend to RAM if it were unplugged, and then unplug the computer, it automatically hibernates.

This is quite annoying since I tend to unplug it before moving it to use it.

To prevent this I must remember to touch a key before unplugging it.  Then the idle counter is restarted and it won't suspend when I unplug it.

If there is any way to detect "the power was -just- disconnected, therefore restart the idle counter" that would be fantastic.

To replicate:
1. check the timer on when your laptop would suspend if running on battery
2. plug in computer (power)
3. leave it alone for that time +1 minute (for good measure)
4. touch no keys or mouse or mouse button
5. unplug the power
6. watch your computer suspend to RAM even if you are fast enough to click "Cancel" on the notification
7. gnash teeth and foam at mouth (that part is optional, but it's what I feel like doing as I watch my computer suspend when I really want to use it instead)

As a sort'a aside, and I've filed a bug on this particular issue, this is particularly annoying now since my wireless hardware doesn't work upon resuming.  I have to reboot.  This mere annoyance has turned into a downright frustration now.  Since things used to be better, I am confident they can be restored to that better state, and optimistic that you folks a Super Cool enough to make it even better than before.
Comment 1 Dario Freddi 2010-11-28 15:49:50 UTC
SVN commit 1201734 by dafre:

BUG:257871

Fake user activity on adapter plug/unplug

 M  +2 -0      powerdevilcore.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201734
Comment 2 Will Stephenson 2010-11-29 16:11:00 UTC
\o/