BUG:257871

Fake user activity on adapter plug/unplug

svn path=/trunk/KDE/kdebase/workspace/; revision=1201734